<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_outline_24"
        android:title="@string/nav_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/ic_send_outline_24"
        android:title="@string/nav_message"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/createFragment"
        android:icon="@drawable/ic_add_box_24"
        android:title="@string/nav_create"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_heart_outline_24"
        android:title="@string/nav_notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person_outline_24"
        android:title="@string/nav_profile"
        app:showAsAction="ifRoom" />

</menu>